fixed slider image, button, horizontal scroll and navbar styling issues

--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=FAMILY_NAME:wght@WEIGHT_OR_RANGE&display=swap');
-.Carousel {
+.ContainerC {
     width: 100%;
     margin-top: 0;
     height: 700px;
-
+  object-fit: scale-down;
     
   }
   .text {
@@ -13,37 +13,13 @@
   
    text-align: center;
     border-bottom: .5vw solid #cd7e3e;
-    animation: anim 3.5s linear   ;
+
  
 
   }
 
-@keyframes anim {
-    0%{
-        width: 0;
-        height: 0;
+ 
 
-    }
-    30%{
-        width: 50%;
-        height: 0%;
-    }
- 
-    60%{
-        width: 59vw;
-        height: 12vw;
-    }
-    80%{
-        width: 59vw;
-        height: 12vw;
-    }
-    100%{
-        width: 59vw;
-        height: 12vw;
-    }
- 
- 
-}
   .buttom{
   
     color: rgba(255, 255, 255, 0.9) !important;
@@ -53,28 +29,18 @@
     background: #ffcc8f;
     border: 2px solid;
     border-color: #cd7e3e;
-    border-radius: 10px;
+    border-radius: 30px;
     position: relative;
     outline: none;
     transition: background-color 0.1s linear;
     padding: 21px 34px;
     margin-top: 30px;
   
-    border-radius: 50px;
-    height: 60px;
-    width: 280px;
-    font-size: 10px;
   
-    font-style: normal;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    margin-bottom: 30px;
+  
   }
-  .buttom :hover {
-    box-shadow: 0px 3px 35px -3px rgba(254, 207, 160, 0.95);
-    -webkit-box-shadow: 0px 3px 35px -3px  rgba(254, 207, 160, 0.95);
-    -moz-box-shadow: 0px 3px 35px -3px  rgba(254, 207, 160, 0.95);
- 
+  .carousel-indicators {
+    display: none;
   }
   @media  (Max-width: 991px) and (Min-Width: 0px){
   
@@ -103,16 +69,24 @@
         
           
         }
-        @media  (Max-width: 413px) {
+        @media  (Min-width: 747px) {
   
       
          
             .Carousel {
         
-              height: 300px !important;
+            width: 100%;
+            object-fit: cover;
+            height: 700px ;
       
               
             }
           
+            .ContainerC {
+               
+                height: 600px;
+             
+                
+              }
             
           }
