--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
+*{
 
-  body{
- overflow-x: hidden !important;
-  }
-
-
-  
+box-sizing: border-box;
+overflow-x: hidden;
+}
